--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+html {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 a:hover {
   text-decoration: none;
 }
@@ -6,12 +15,10 @@ body {
   text-align: center;
 }
 
-html {
-  scroll-behavior: smooth;
-}
 #nabar {
   position: fixed;
 }
+
 hr {
   color: lightgrey;
   border-style: none;
@@ -20,6 +27,8 @@ hr {
 }
 
 table {
+  position: relative;
+  table-layout: fixed;
   text-align: left;
   width: 100%;
 }
@@ -50,8 +59,16 @@ th, td {
 }
 
 .title-heading {
+  color: white;
   font-size: 3.5rem;
   line-height: 1.5;
+}
+
+.title-p {
+  color: white;
+  font-size: 1.5rem;
+  line-height: 1.25;
+  padding-bottom: 3rem;
 }
 
 /* TITLE */
@@ -98,4 +115,12 @@ th, td {
 
 .social-icon {
   padding: 0 10px;
+}
+
+
+@media only screen and (max-width: 991px) {
+  .navbar {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
