--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,13 @@ th, td {
 }
 
 .title-heading {
-  color: white;
+  /* color: white; */
   font-size: 3.5rem;
   line-height: 1.5;
 }
 
 .title-p {
-  color: white;
+  /* color: white; */
   font-size: 1.5rem;
   line-height: 1.25;
   padding-bottom: 3rem;
@@ -74,12 +74,22 @@ th, td {
 /* TITLE */
 
 #title {
-  background-color: #caf2d7;
+  background-color: #F7F5DE;
 }
 /* .logo {
   font-family: Ubuntu;
 } */
 
+.top-container {
+  position: relative;
+}
+
+.top-container .pipe-organ-image {
+  top: 1rem;
+  right: 15rem;
+  position: absolute;
+  width: 200px;
+}
 
 /* ABOUT ME */
 
