--- a/css/style-night.css
+++ b/css/style-night.css
@@ -15,6 +15,8 @@ a:hover {
 }
 
 body {
+  background-color: black;
+  color: white;
   font-family: 'Open Sans', sans-serif;
   max-width: 100vw;
   margin: 0;
@@ -66,11 +68,11 @@ html {
 /* TITLE */
 
 #title {
-  background-color: #d6e4aa;
+  background-color: black;
 }
 
 .title-heading {
-  color: white;
+  color: #d6e4aa;
   font-size: 7rem;
   font-family: 'Caveat', sans-serif;
   line-height: 1.5;
@@ -128,7 +130,7 @@ html {
 /* FOOTER */
 
 #footer {
-  background-color: #d6e4aa;
+  background-color: black;
   padding: 2% 0 1%;
 }
 
