--- a/css/style-night.css
+++ b/css/style-night.css
@@ -17,7 +17,7 @@ a:hover {
 body {
   background-color: black;
   color: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Varela+Round', sans-serif;
   max-width: 100vw;
   margin: 0;
   overflow-x: hidden;
@@ -106,6 +106,8 @@ html {
   font-size: 1.2rem;
   list-style: none;
   list-style-position: inside;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .repertoire-list a {
@@ -124,7 +126,8 @@ html {
 .mailto-button {
   background-color: #83b582;
   border: 0;
-  margin-top: 4rem;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .mailto-button:hover {
