--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a:hover {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Varela+Round', sans-serif;
   max-width: 100vw;
   margin: 0;
   overflow-x: hidden;
@@ -104,6 +104,8 @@ html {
   font-size: 1.2rem;
   list-style: none;
   list-style-position: inside;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .repertoire-list a {
@@ -122,7 +124,8 @@ html {
 .mailto-button {
   background-color: #83b582;
   border: 0;
-  margin-top: 4rem;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .mailto-button:hover {
