Delete style-night.css, imply darkmode in style.css + better js solution

--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,23 @@ html {
   }
 
 }
+
+
+/* DARKMODE */
+
+.night {
+  background-color: black;
+  color: white;
+}
+
+.night.title-heading {
+  color: #d6e4aa;
+}
+
+.night#title {
+  background-color: black;
+}
+
+.night#footer {
+  background-color: black;
+}
